package com.eventsystem.domain.zone;

public enum SeatStatus {
    AVAILABLE,
    RESERVED,
    SOLD
}
